--- a/src/blog.html
+++ b/src/blog.html
@@ -8,6 +8,7 @@ These are all of my amazing blog posts, enjoy!
   {% for post in collections.blog | reverse %}
   <li>
     <a href="{{post.url}}">{{ post.data.title }}</a>
+    <p><img src="{{post.data.meta_image}}" width="50%" height="50%"/></p>
   </li>
   {% endfor %}
 </ul>
