--- a/src/blog.html
+++ b/src/blog.html
@@ -7,8 +7,7 @@ These are all of my amazing blog posts, enjoy!
 <ul>
   {% for post in collections.blog | reverse %}
   <li>
-    <a href="{{post.url}}">{{ post.data.title }}</a>
-    <p><img src="{{post.data.meta_image}}" width="50%" height="50%"/></p>
+    <a href="{{post.url}}"><img src="{{post.data.meta_image}}" width="50%" height="50%" title="{{ post.title }}/></a>
   </li>
   {% endfor %}
 </ul>
