--- a/src/blog.html
+++ b/src/blog.html
@@ -6,9 +6,11 @@ layout: base.njk
 These are all of my amazing blog posts, enjoy!
 
 <div class="img-archive">
-{% for post in collections.blog | reverse %}
+<ul>
+  {% for post in collections.blog | reverse %}
 
-  <a href="{{post.url}}"><img src="{{post.data.meta_image}}" title="{{ post.title }}" /></a>
+  <li><a href="{{ post.url }}"><img src="{{ post.data.meta_image }}" title="{{ post.title }}" /></a></li>
   
 {% endfor %}
+</ul>
 </div>
