--- a/src/blog.html
+++ b/src/blog.html
@@ -5,11 +5,13 @@ layout: base.njk
 
 These are all of my amazing blog posts, enjoy!
 
+<br />
+
 <div class="img-archive">
 
   {% for post in collections.blog | reverse %}
 
-  <a href="{{ post.url }}"><img src="{{ post.data.meta_image }}" title="{{ post.title }}" /></a>
+  <a href="{{ post.url }}"><img src="{{ post.data.meta_image }}" title="{{ post.data.title }}" /></a>
   
 {% endfor %}
 
