--- a/src/changelog.html
+++ b/src/changelog.html
@@ -4,6 +4,15 @@ layout: base.njk
 --- 
 <p>A list of changes made to this photo blog.</p> 
 
+<h2 id="upcoming-changes">Upcoming Changes</h2>
+<p style="font-size: smallest;"><em>Some things that I want to add or change in the future</em></p>
+<ul>
+    <li>Add <mark>"next"</mark> and <mark>"previous"</mark> links to blog posts</li>
+    <li>Change date on posts to readable format</li>
+    <li>Add "last updated" info to <a href="">Changelog</a></li>
+    <li>Far future: make image grid "prettier"</li>
+</ul>
+
 <h3 id="23-oct-2024">23 Oct 2024</h3><ul>
     <li>Added new blog posts for layout testing</li>
     <ul><li>Converted Markdown language copied from original blog posts back to HTML</li></ul>
