Minor change - changelog

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -24,6 +24,7 @@ layout: base.njk
         <li>Added CSS styling to create square thumbnail previews</li>
         <li>Moved photo listing to <code>index.html</code> instead of a dedicated archive page</li>
         <li>Added a changelog (:</li>
+        <li>Made the changelog "prettier"</li>
     </ul>
     
     <h3 id="22-oct-2024">22 Oct 2024</h3><ul>
