--- a/src/changelog.html
+++ b/src/changelog.html
@@ -21,6 +21,9 @@ layout: base.njk
         <li>Added new blog posts for layout testing</li>
         <ul><li>Converted Markdown language copied from original blog posts back to HTML</li></ul>
         <li>Gave blog post files unique numbers for better organization</li>
+        <ul>
+            <li>Added permalinks so that URLs don't include the numbers</li>
+        </ul>
         <li>Added CSS styling to create square thumbnail previews</li>
         <li>Moved photo listing to <code>index.html</code> instead of a dedicated archive page</li>
         <li>Added a changelog (:</li>
