--- a/src/changelog.html
+++ b/src/changelog.html
@@ -11,6 +11,7 @@ layout: base.njk
         <li>Add <mark>"next"</mark> and <mark>"previous"</mark> links to blog posts</li>
         <li>Change date on posts to readable format</li>
         <li>Add "last updated" info to <a href="">Changelog</a></li>
+        <li>Add RSS feed</li>
         <li>Far future: make image grid "prettier"</li>
     </ul>
     </div>
