--- a/src/about.html
+++ b/src/about.html
@@ -3,4 +3,24 @@ title: About Me
 layout: base.njk 
 --- 
 
-<p>This is my photo blog. I have another blog you can read called <a href="https://lwgrs.bearblog.dev">An Almost Anonymous Blog</a></p>
+<p>Hi, I'm Steve. I'm usually a writer, posting blogs over at <a href="https://lwgrs.bearblog.dev/">An Almost Anonymous Blog</a>. But I'm also a hobby photographer, playing around with different devices and formats. I'm learning as I go.</p>
+
+<p>For more info about me and more of my work, see my website: <a href="https://srgower.com">https://srgower.com</a>.</p>
+
+<p>Do you like the photos you see? Feel free to support me by <a href="https://www.buymeacoffee.com/srgower">buying me a coffee!</a> <img class="icon" src="/img/icons/buymeacoffee.svg" alt="Buy Me A Coffee"/></p>
+
+<h3>The tools I use</h3>
+
+<p><u>Hardware:</u></p>
+<ul>
+    <li>Sony ILCE-5000 (α5000)</li>
+    <li>Samsung Galaxy S21+</li>
+    <li>iPod Touch (7th Generation)</li>
+</ul>
+<p><u>Software:</u></p>
+<ul>
+    <li>Adobe Lightroom (Classic and Mobile)</li>
+    <li>Snapseed</li>
+    <li>Adobe Photoshop</li>
+    <li>Flickr (photo hosting)</li>
+</ul>
