--- a/src/changelog.html
+++ b/src/changelog.html
@@ -8,10 +8,11 @@ layout: base.njk
     <p style="font-size: smallest; font-style: italic;">Things I would like to change or add to the blog:</p>
     <div class="notice">
     <ul>
-        <li>Add <mark>"next"</mark> and <mark>"previous"</mark> links to blog posts</li>
-        <li>Change date on posts to readable format</li>
-        <li>Add "last updated" info to <a href="">Changelog</a></li>
+        <li><s>Add <mark>"next"</mark> and <mark>"previous"</mark> links to blog posts</s></li>
+        <li><s>Change date on posts to readable format</s></li>
+        <li><s>Add "last updated" info to <a href="">Changelog</a></s></li>
         <li>Add RSS feed</li>
+        <li>Add post categories</li>
         <li>Far future: make image grid "prettier"</li>
     </ul>
     </div>
@@ -29,6 +30,11 @@ layout: base.njk
         <li>Moved photo listing to <code>index.html</code> instead of a dedicated archive page</li>
         <li>Added a changelog (:</li>
         <li>Made the changelog "prettier"</li>
+        <li>Dates are in a more reader-friendly format</li>
+        <li>Added <mark>"next"</mark> and <mark>"previous"</mark> links to blog posts</li>
+        <li>Updated "About" and "Contact" pages</li>
+        <li>Minor aesthetic tweaks</li>
+
     </ul>
     
     <h3 id="22-oct-2024">22 Oct 2024</h3><ul>
