--- a/src/contact.html
+++ b/src/contact.html
@@ -3,4 +3,4 @@ title: Contact Me
 layout: base.njk 
 --- 
 
-<p>Various ways to say hello.</p>
+<p>The best way to get in touch with me is to find me on <a href="https://ottawa.place/@srgower/" rel="me">Mastodon</a> or <a href="https://bsky.app/profile/srgower.com">Bluesky</a>.
