--- a/src/changelog.html
+++ b/src/changelog.html
@@ -13,7 +13,9 @@ layout: base.njk
         <li><s>Add "last updated" info to <a href="">Changelog</a></s></li>
         <li>Add RSS feed</li>
         <li>Add post categories</li>
+        <li>Improve mobile view</li>
         <li>Far future: make image grid "prettier"</li>
+        <li>Far future: make changelog sections collapsible</li>
     </ul>
     </div>
     
