--- a/src/about.html
+++ b/src/about.html
@@ -14,6 +14,12 @@ layout: base.njk
 <p><u>Hardware:</u></p>
 <ul>
     <li>Sony ILCE-5000 (α5000)</li>
+    <ul>
+        <li>F3.5-5.6 / 16-50mm</li>
+        <li>F3.5-5.6 / 28-70mm</li>
+        <li>F4.5-6.3 / 55-210mm</li>
+        <li>F0 / 0mm (<a href="https://www.amazon.ca/dp/B09BKWSRJL?ref=ppx_yo2ov_dt_b_fed_asin_title" target="_blank">plastic/disposable lens</a> - non-referral Amazon Link)</li>
+    </ul>
     <li>Samsung Galaxy S21+</li>
     <li>iPod Touch (7th Generation)</li>
 </ul>
