Changed blog link structure

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -21,6 +21,9 @@ layout: base.njk
     
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
+    <h3 id="24-oct-2024">24 Oct 2024</h3><ul>
+        <li>Changed link structure and moved blog posts into folder by year</li>
+    </ul>
     <h3 id="23-oct-2024">23 Oct 2024</h3><ul>
         <li>Added new blog posts for layout testing</li>
         <ul><li>Converted Markdown language copied from original blog posts back to HTML</li></ul>
