--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,9 @@
 ---
-title: Stephen Gower's Photo Blog
+title: Photos by Stephen Gower
 layout: base.njk 
 ---
 
 <p>Welcome to my photo blog. Click on any image below to start exploring.</p>
-
 
 <div class="img-archive">
 
