--- a/src/changelog.html
+++ b/src/changelog.html
@@ -5,13 +5,13 @@ layout: base.njk
 <p>A list of changes made to this photo blog.</p> 
 
 <p><strong>Upcoming Changes</strong>
-    <p style="font-size: smallest; font-style: italic;">Things I would like to change or add to the blog:</p>
+    <p style="font-size: smallest; font-style: italic;">Things I would like to change or add to the blog📌</p>
     <div class="notice">
     <ul>
         <li><s>Add <mark>"next"</mark> and <mark>"previous"</mark> links to blog posts</s></li>
         <li><s>Change date on posts to readable format</s></li>
         <li><s>Add "last updated" info to <a href="">Changelog</a></s></li>
-        <li>Add RSS feed</li>
+        <li><s>Add RSS feed</s></li>
         <li>Add post categories</li>
         <li>Improve mobile view</li>
         <li>Far future: make image grid "prettier"</li>
@@ -21,6 +21,10 @@ layout: base.njk
     
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
+        <h3 id="25-oct-2024">25 Oct 2024 <em>v1.0</em></h3><ul>
+            <li>Added RSS Feed & subscribe link</li>
+            <li>Changed name of blog to "Photos by Stephen Gower"</li>
+        </ul>
     <h3 id="24-oct-2024">24 Oct 2024</h3><ul>
         <li>Changed link structure and moved blog posts into folder by year</li>
     </ul>
