New post. Also made slight change to About page, and added items to Changelog.

--- a/src/about.html
+++ b/src/about.html
@@ -28,5 +28,6 @@ layout: base.njk
     <li>Adobe Lightroom (Classic and Mobile)</li>
     <li>Snapseed</li>
     <li>Adobe Photoshop</li>
-    <li>Flickr (photo hosting)</li>
+    <li><a href="https://www.flickr.com/photos/stephenrg/">Flickr</a> (photo hosting)</li>
+    <li><a href="https://github.com/lwgrs/sg-photos">github</a> / <a href="https://netlify.com">Netlify</a> (code / web hosting)</li>
 </ul>
