--- a/src/changelog.html
+++ b/src/changelog.html
@@ -5,13 +5,10 @@ layout: base.njk
 <p>A list of changes made to this photo blog.</p> 
 
 <p><strong>Upcoming Changes</strong>
-    <p style="font-size: smallest; font-style: italic;">Things I would like to change or add to the blog📌</p>
+    <p style="font-size: smallest; font-style: italic;">📌Things I would like to change or add to the blog</p>
     <div class="notice">
     <ul>
-        <li><s>Add <mark>"next"</mark> and <mark>"previous"</mark> links to blog posts</s></li>
-        <li><s>Change date on posts to readable format</s></li>
-        <li><s>Add "last updated" info to <a href="">Changelog</a></s></li>
-        <li><s>Add RSS feed</s></li>
+        <li>Reduce image width/height on posts</li>
         <li>Add post categories</li>
         <li>Improve mobile view</li>
         <li>Far future: make image grid "prettier"</li>
