--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,15 @@ layout: base.njk
 
 <p>Welcome to my photo blog. Click on any image below to start exploring.</p>
 
-<div class="img-archive">
 
-    {% for post in collections.blog | reverse %}
-  
-    <a href="{{ post.url }}"><img src="{{ post.data.meta_image }}" title="{{ post.data.title }}" /></a>
-    
-  {% endfor %}
-  
+{% if collections.blog.length > 9 %}
+<p style="width: 100%;text-align: right;padding-right: 20px;"><a href="/archive/">view all photos</a></p>
+{% endif %} 
+
+<div class="img-index">
+  {% for post in collections.blog | reverse %}
+  {% if loop.index0 < 9 %}
+  <a href="{{ post.url }}"><img src="{{ post.data.meta_image }}" title="{{ post.data.title }}" /></a>
+  {% endif %}
+{% endfor %}  
   </div>
