Forgot to add some items to changelog to do list.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -11,6 +11,8 @@ layout: base.njk
         <li><s>Reduce image width/height on posts</s> <em>No longer necessary, this was to improve mobile appearance</em></li>
         <li>Add post categories</li>
         <li><s>Improve mobile view</s></li>
+        <li>Create/add favicon</li>
+        <li>Create a logo? Or a default image for sharing main site on social</li>
         <li>Far future: make image grid "prettier"</li>
         <li><s>Far future: make changelog sections collapsible</s></li>
     </ul>
