--- a/src/changelog.html
+++ b/src/changelog.html
@@ -26,6 +26,7 @@ layout: base.njk
             <li>Optimized mobile appearance - images now appear in 2x2 grid</li>
             <li>Added an "archive" page, limit index to showing 9 images</li>
             <ul><li>Link to archive will only show if there are &gt;9 images</li></ul>
+            <li>Created a <a href="/feed.json">JSON feed</a></li>
           </ul>
         </details>
         <details>    
