Added favicon + logo
Added a logo to meta image & favicon. Deleted a placeholder image as well. Updated base.njk & index.html to incorporate new images.

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 ---
 title: Photos by Stephen Gower
 layout: base.njk 
+meta_image: https://photos.srgower.com/img/sgp-logo.jpg
 ---
 
 <p>Welcome to my photo blog. Click on any image below to start exploring.</p>
