Added site logo
Added site logo to header. Updated changelog.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -8,19 +8,23 @@ layout: base.njk
     <p style="font-size: smallest; font-style: italic;">📌Things I would like to change or add to the blog</p>
     <div class="notice">
     <ul>
-        <li><s>Reduce image width/height on posts</s> <em>No longer necessary, this was to improve mobile appearance</em></li>
         <li>Add post categories</li>
-        <li><s>Improve mobile view</s></li>
-        <li>Create/add favicon</li>
-        <li>Create a logo? Or a default image for sharing main site on social</li>
         <li>Far future: make image grid "prettier"</li>
-        <li><s>Far future: make changelog sections collapsible</s></li>
     </ul>
     </div>
     
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
-        <details open>
+      <details open>
+        <summary>04 Nov 2024</summary>
+        <ul>
+          <li>Added site logo</li>
+          <li>Added favicon</li>
+        </ul>
+      </details>
+      <details>
+        <summary>October</summary>
+        <details>
           <summary>29 Oct 2024</summary>
           <ul>
             <li>Optimized mobile appearance - images now appear in 2x2 grid</li>
@@ -70,5 +74,6 @@ layout: base.njk
             <ul>
               <li>Built base site template using <a href="https://flamedfury.com/guides/11ty-homepage-neocities/">Flamed Fury's 11ty Guide</a> as template</li>
             </ul>
+          </details>
           </details>
     </div>
