--- a/src/changelog.html
+++ b/src/changelog.html
@@ -20,6 +20,7 @@ layout: base.njk
         <ul>
           <li>Added site logo</li>
           <li>Added favicon</li>
+          <li>Corrected meta tag information</li>
         </ul>
       </details>
       <details>
