Added item to 'to do' list on changelog

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -9,6 +9,7 @@ layout: base.njk
     <div class="notice">
     <ul>
         <li>Add post categories</li>
+        <li>Add "comment"/"contact" text at bottom of posts</li>
         <li>Far future: make image grid "prettier"</li>
     </ul>
     </div>
