Added "Share" button
Added a share button to bottom of blog posts + styling to styles.css. Updated changelog.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -9,13 +9,20 @@ layout: base.njk
     <div class="notice">
     <ul>
         <li>Add post categories</li>
-        <li>Far future: make image grid "prettier"</li>
+        <li>Add basic analytics</li>
+        <li>Add comments</li>
     </ul>
     </div>
     
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
       <details open>
+        <summary>09 Nov 2024</summary>
+        <ul>
+          <li>Added "Share" button to bottom of posts</li>
+        </ul>
+      </details>
+      <details>
         <summary>04 Nov 2024</summary>
         <ul>
           <li>Added site logo</li>
