Added meta info to changelog
Minor change. Added meta info to frontmatter.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -1,6 +1,8 @@
 --- 
 title: Changelog 
 layout: base.njk 
+meta_description: A summary of changes made to the website in reverse chronological order. 
+meta_image: https://photos.srgower.com/img/sgp-logo.jpg
 --- 
 <p>A list of changes made to this photo blog.</p> 
 
