Added tags to posts
Added tags to posts. Not collected anywhere yet. Had to change "blogs" to "post" in various places collecting data.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -10,7 +10,7 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p style="font-size: smallest; font-style: italic;">📌Things I would like to change or add to the blog</p>
     <div class="notice">
     <ul>
-        <li>Add post categories</li>
+        <li><s>Add post categories</s> Create pages collecting post categories</li>
         <li>Add basic analytics</li>
         <li>Add comments</li>
     </ul>
@@ -19,6 +19,12 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
       <details open>
+        <summary>11 Nov 2024</summary>
+        <ul>
+          <li>Added tags to posts</li>
+        </ul>
+      </details>
+      <details>
         <summary>09 Nov 2024</summary>
         <ul>
           <li>Added "Share" button to bottom of posts</li>
