--- a/src/changelog.html
+++ b/src/changelog.html
@@ -10,7 +10,6 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p style="font-size: smallest; font-style: italic;">📌Things I would like to change or add to the blog</p>
     <div class="notice">
     <ul>
-        <li><s>Add post categories</s> Create pages collecting post categories</li>
         <li>Add basic analytics</li>
         <li>Add comments</li>
     </ul>
@@ -19,6 +18,15 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
       <details open>
+        <summary>12 Nov 2024 <em>v1.2</em></summary>
+        <ul>
+          <li>Created links for tags + <a href="/tags/">tag list page</a></li>
+          <li>Added nav links</li>
+          <ul><li>Modified Nav CSS style to allow multi-lin display on mobile <em>("home" and "subscribe" links were cut-off on mobile)</em></li></ul>
+          <li>Added details to contact page</li>
+        </ul>
+      </details>
+      <details>
         <summary>11 Nov 2024</summary>
         <ul>
           <li>Added tags to posts</li>
