--- a/src/contact.html
+++ b/src/contact.html
@@ -3,4 +3,5 @@ title: Contact Me
 layout: base.njk 
 --- 
 
-<p>The best way to get in touch with me is to find me on <a href="https://ottawa.place/@srgower/" rel="me">Mastodon</a> or <a href="https://bsky.app/profile/srgower.com">Bluesky</a>.
+<p>The best way to get in touch with me quickly is to find me on <a href="https://ottawa.place/@srgower/" rel="me">Mastodon</a> or <a href="https://bsky.app/profile/srgower.com">Bluesky</a>.</p>
+<p>You can also <a href="mailto:srgower+photos@gmail.com">send me an email</a>.</p>
