Created new subscription page to acommodate email sign-up.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -18,6 +18,13 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
       <details open>
+        <summary>13 Nov 2024</summary>
+        <ul>
+          <li>Created a separate "subscribe" page</li>
+          <ul><li>Added an email subscription option</li></ul>
+        </ul>
+      </details>
+      <details>
         <summary>12 Nov 2024 <em>v1.2</em></summary>
         <ul>
           <li>Created links for tags + <a href="/tags/">tag list page</a></li>
