Updated styles and changelog
Moved changelog link from main nav to footer; styled tags within posts to match all tags page.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -18,6 +18,13 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
       <details open>
+        <summary>17 Nov 2024</summary>
+        <ul>
+          <li>Styled tags on blog posts to match all tags page</li>
+          <li>Moved changelog from main nav to footer</li>
+        </ul>
+      </details>
+      <details>
         <summary>13 Nov 2024</summary>
         <ul>
           <li>Created a separate "subscribe" page</li>
