Updated changelog to reflect added analyticvs.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -10,14 +10,19 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p style="font-size: smallest; font-style: italic;">📌Things I would like to change or add to the blog</p>
     <div class="notice">
     <ul>
-        <li>Add basic analytics</li>
-        <li>Add comments</li>
+        <li>Add comments ?</li>
     </ul>
     </div>
     
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
       <details open>
+        <summary>19 Nov 2024 <em>v1.2.1</em></summary>
+        <ul>
+          <li>Added basic analytics via <a href="https://tinylitics.app">Tinylitics</a></li>
+        </ul>
+      </details>
+      <details>
         <summary>17 Nov 2024</summary>
         <ul>
           <li>Styled tags on blog posts to match all tags page</li>
