Corrected Tinylytics URL & name

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -19,7 +19,7 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
       <details open>
         <summary>19 Nov 2024 <em>v1.2.1</em></summary>
         <ul>
-          <li>Added basic analytics via <a href="https://tinylitics.app">Tinylitics</a></li>
+          <li>Added basic analytics via <a href="https://tinylytics.app">Tinylytics</a></li>
         </ul>
       </details>
       <details>
