Updated Subscribe page & Changelog.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -6,7 +6,7 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
 --- 
 <p>A list of changes made to this photo blog.</p> 
 
-<p><strong>Upcoming Changes</strong>
+<p><strong>Roadmap</strong>
     <p style="font-size: smallest; font-style: italic;">📌Things I would like to change or add to the blog</p>
     <div class="notice">
     <ul>
@@ -17,6 +17,12 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
       <details open>
+        <summary>09 Jun 2025 <em>v1.2.2</em></summary>
+        <ul>
+          <li>Changed RSS Feed link on <a href="/subscribe/">Subscribe page</a> to  <a href="https://subscribeopenly.net">Subscribe Openly link</a></li>
+        </ul>
+      </details>
+      <details>
         <summary>19 Nov 2024 <em>v1.2.1</em></summary>
         <ul>
           <li>Added basic analytics via <a href="https://tinylytics.app">Tinylytics</a></li>
