--- a/src/subscribe.html
+++ b/src/subscribe.html
@@ -6,7 +6,7 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
 ---
 
 <p>To get the latest posts directly, there are a couple of options available to you:</p>
-<p><strong><a href="/feed.xml">RSS Feed<img class="icon" src="/img/icons/rss.png" alt="RSS Logo"/></a></strong></p>
+<p><strong><a href="https://subscribeopenly.net/subscribe/?url=https://photos.srgower.com/feed.xml">RSS Feed<img class="icon" src="/img/icons/rss.png" alt="RSS Logo"/></a></strong></p>
 <p>You can now also subscribe by email! Posts are sent from RSS to email via <a href="https://follow.it">follow.it</a>.</p>
 
 <div class="followit--follow-form-container" attr-a attr-b attr-c attr-d attr-e attr-f>
