Added device to about.html + updated changelog.html

--- a/src/about.html
+++ b/src/about.html
@@ -20,6 +20,7 @@ layout: base.njk
         <li>F4.5-6.3 / 55-210mm</li>
         <li>F0 / 0mm (<a href="https://www.amazon.ca/dp/B09BKWSRJL?ref=ppx_yo2ov_dt_b_fed_asin_title" target="_blank">plastic/disposable lens</a> - non-referral Amazon Link)</li>
     </ul>
+    <li>DJI Mini 4K</li>
     <li>Samsung Galaxy S21+</li>
     <li>iPod Touch (7th Generation)</li>
 </ul>
