--- a/src/changelog.html
+++ b/src/changelog.html
@@ -17,6 +17,12 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
       <details open>
+        <summary>29 Dec 2025 <em>v1.2.3</em></summary>
+        <ul>
+          <li>Added new device in tools on <a href="/about/">About page</a></li>
+        </ul>
+      </details>
+      <details>
         <summary>09 Jun 2025 <em>v1.2.2</em></summary>
         <ul>
           <li>Changed RSS Feed link on <a href="/subscribe/">Subscribe page</a> to  <a href="https://subscribeopenly.net">Subscribe Openly link</a></li>
