Removed version number from latest changelog.html update.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -17,7 +17,7 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
       <details open>
-        <summary>29 Dec 2025 <em>v1.2.3</em></summary>
+        <summary>29 Dec 2025</summary>
         <ul>
           <li>Added new device in tools on <a href="/about/">About page</a></li>
         </ul>
