Added post scheduling and updated changelog.html

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -17,6 +17,12 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p><strong>Most recent updates</strong></p>
     <div class="notice">
       <details open>
+        <summary>30 Dec 2025 <em>1.2.3</em></summary>
+      <ul>
+        <li>Enabled post scheduling</li>
+      </ul>
+    </details>
+      <details>
         <summary>29 Dec 2025</summary>
         <ul>
           <li>Added new device in tools on <a href="/about/">About page</a></li>
