Added item to roadmap on changelog; uploaded new scheduled post.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -10,7 +10,8 @@ meta_image: https://photos.srgower.com/img/sgp-logo.jpg
     <p style="font-size: smallest; font-style: italic;">📌Things I would like to change or add to the blog</p>
     <div class="notice">
     <ul>
-        <li>Add comments ?</li>
+      <li>Add markdown support</li>  
+      <li>Add comments ?</li>
     </ul>
     </div>
     
